+earningRule endpoints